--- a/rewrite/modules/package.json
+++ b/rewrite/modules/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.2"
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-closure-compiler": "0.0.18"
   }
 }
